[tool.poetry]
name = "dalle-flow"
version = "0.3.0"
description = ""
authors = ["Nicolai B. Thomsen <nicolai.thomsen@nttdata.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.8.1"
docarray = {extras = ["common"], version = "^0.13.6"}
jina = "^3.3.23"
qrcode = "^7.3.1"
cloudinary = "^1.29.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pre-commit = "^2.18.1"
invoke = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
